--- a/RoleDictionary/index.html
+++ b/RoleDictionary/index.html
@@ -156,9 +156,9 @@
                              <h2 class="text-xl font-semibold text-slate-800 mb-1">1. Careers and Job Opportunities</h2>
                              <p class="text-slate-500 mb-4">Public and internal job exploration.</p>
                              <ul class="space-y-2 text-lg">
-                                 <li><a href="akara-careers.html" class="text-indigo-600 hover:underline">Akara Careers</a></li>
-                                 <li><a href="akara-job-detail.html" class="text-indigo-600 hover:underline">Akara Job Detail</a></li>
-                                 <li><a href="internal-opportunities.html" class="text-indigo-600 hover:underline">Internal Opportunities</a></li>
+                                 <li><a href="TALENTHUB-main/akara-careers.html" class="text-indigo-600 hover:underline">Akara Careers</a></li>
+                                 <li><a href="TALENTHUB-main/akara-job-detail.html" class="text-indigo-600 hover:underline">Akara Job Detail</a></li>
+                                 <li><a href="TALENTHUB-main/internal-opportunities.html" class="text-indigo-600 hover:underline">Internal Opportunities</a></li>
                              </ul>
                         </div>
                     </div>
@@ -169,12 +169,12 @@
                             <h2 class="text-xl font-semibold text-slate-800 mb-1">2. Talent Acquisition & Screening</h2>
                             <p class="text-slate-500 mb-4">Tools supporting hiring workflows.</p>
                             <ul class="space-y-2 text-lg">
-                                <li><a href="lms-ats-integration.html" class="text-indigo-600 hover:underline">LMS-ATS Integration</a></li>
-                                <li><a href="assessments_app.html" class="text-indigo-600 hover:underline">Assessments App</a></li>
-                                <li><a href="proctored_assessment.html" class="text-indigo-600 hover:underline">Proctored Assessment</a></li>
-                                <li><a href="create_with_ai.html" class="text-indigo-600 hover:underline">Create with AI</a></li>
-                                <li><a href="requisitions.html" class="text-indigo-600 hover:underline">Requisitions</a></li>
-                                <li><a href="screen-candidates.html" class="text-indigo-600 hover:underline">Screen Candidates</a></li>
+                                <li><a href="TALENTHUB-main/lms-ats-integration.html" class="text-indigo-600 hover:underline">LMS-ATS Integration</a></li>
+                                <li><a href="TALENTHUB-main/assessments_app.html" class="text-indigo-600 hover:underline">Assessments App</a></li>
+                                <li><a href="TALENTHUB-main/proctored_assessment.html" class="text-indigo-600 hover:underline">Proctored Assessment</a></li>
+                                <li><a href="TALENTHUB-main/create_with_ai.html" class="text-indigo-600 hover:underline">Create with AI</a></li>
+                                <li><a href="TALENTHUB-main/requisitions.html" class="text-indigo-600 hover:underline">Requisitions</a></li>
+                                <li><a href="TALENTHUB-main/screen-candidates.html" class="text-indigo-600 hover:underline">Screen Candidates</a></li>
                             </ul>
                         </div>
                     </div>
@@ -184,9 +184,9 @@
                             <h2 class="text-xl font-semibold text-slate-800 mb-1">3. Performance & Succession</h2>
                              <p class="text-slate-500 mb-4">Performance management and leadership pipeline tools.</p>
                              <ul class="space-y-2 text-lg">
-                                 <li><a href="performance-reviews.html" class="text-indigo-600 hover:underline">Performance Reviews</a></li>
-                                 <li><a href="succession-planning.html" class="text-indigo-600 hover:underline">Succession Planning</a></li>
-                                 <li><a href="goals.html" class="text-indigo-600 hover:underline">Goals</a></li>
+                                 <li><a href="TALENTHUB-main/performance-reviews.html" class="text-indigo-600 hover:underline">Performance Reviews</a></li>
+                                 <li><a href="TALENTHUB-main/succession-planning.html" class="text-indigo-600 hover:underline">Succession Planning</a></li>
+                                 <li><a href="TALENTHUB-main/goals.html" class="text-indigo-600 hover:underline">Goals</a></li>
                              </ul>
                         </div>
                     </div>
@@ -196,21 +196,21 @@
                             <h2 class="text-xl font-semibold text-slate-800 mb-1">4. Dashboards & Integration</h2>
                              <p class="text-slate-500 mb-4">Platform-wide dashboards and integrations.</p>
                              <ul class="space-y-2 text-lg">
-                                 <li><a href="ats_dashboard.html" class="text-indigo-600 hover:underline">ATS Dashboard</a></li>
-                                 <li><a href="index.html" class="text-indigo-600 hover:underline">Home (Marketplace Index)</a></li>
+                                 <li><a href="TALENTHUB-main/ats_dashboard.html" class="text-indigo-600 hover:underline">ATS Dashboard</a></li>
+                                 <li><a href="TALENTHUB-main/index.html" class="text-indigo-600 hover:underline">Home (Marketplace Index)</a></li>
                              </ul>
                         </div>
                     </div>
                     
                     <!-- Simplified other tabs -->
-                    <div id="tab-admin" class="tab-panel hidden" role="tabpanel"><div class="bg-white border border-slate-200 rounded-lg p-6"><h2 class="text-xl font-semibold text-slate-800 mb-1">5. Admin & Backend Tools</h2><p class="text-slate-500 mb-4">Internal automation and system maintenance.</p><a href="job_scraper.html" class="text-indigo-600 hover:underline text-lg">Job Scraper</a></div></div>
+                    <div id="tab-admin" class="tab-panel hidden" role="tabpanel"><div class="bg-white border border-slate-200 rounded-lg p-6"><h2 class="text-xl font-semibold text-slate-800 mb-1">5. Admin & Backend Tools</h2><p class="text-slate-500 mb-4">Internal automation and system maintenance.</p><a href="TALENTHUB-main/job_scraper.html" class="text-indigo-600 hover:underline text-lg">Job Scraper</a></div></div>
 
                     <div id="tab-ready" class="tab-panel" role="tabpanel">
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
                             <div class="bg-white border content-card border-slate-200 rounded-lg p-6">
                                 <h3 class="font-semibold text-lg text-slate-800 mb-4">Job Architecture</h3>
                                 <p class="text-sm text-slate-500 mb-4 flex-grow">A comprehensive view of job roles, levels, and their relationships.</p>
-                                <a href="job-architecture.html" class="text-indigo-600 hover:underline block">
+                                <a href="TALENTHUB-main/job-architecture.html" class="text-indigo-600 hover:underline block">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 inline-block mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
                                     </svg>
@@ -249,11 +249,11 @@
                             <div class="bg-white border content-card border-slate-200 rounded-lg p-6">
                                 <h3 class="font-semibold text-lg text-slate-800 mb-4">Career Pathing & Personalized Learning</h3>
                                 <ul class="space-y-2 text-lg">
-                                    <li><a href="career-pathing.html" class="text-indigo-600 hover:underline">Career Pathing</a></li>
-                                    <li><a href="personalized-learning-path/index.html" class="text-indigo-600 hover:underline">Personalized Learning Path</a></li>
-                                    <li><a href="ai-career-advisor/index.html" class="text-indigo-600 hover:underline">Career Coach AI Chatbot</a></li>
-                                    <li><a href="personalized-learning-path/explore-career-maps.html" class="text-indigo-600 hover:underline">Explore Career Maps</a></li>
-                                    <li><a href="career_pathing_mvp.html" class="text-indigo-600 hover:underline">MVP scope</a></li>
+                                    <li><a href="TALENTHUB-main/career-pathing.html" class="text-indigo-600 hover:underline">Career Pathing</a></li>
+                                    <li><a href="TALENTHUB-main/personalized-learning-path/index.html" class="text-indigo-600 hover:underline">Personalized Learning Path</a></li>
+                                    <li><a href="TALENTHUB-main/ai-career-advisor/index.html" class="text-indigo-600 hover:underline">Career Coach AI Chatbot</a></li>
+                                    <li><a href="TALENTHUB-main/personalized-learning-path/explore-career-maps.html" class="text-indigo-600 hover:underline">Explore Career Maps</a></li>
+                                    <li><a href="TALENTHUB-main/career_pathing_mvp.html" class="text-indigo-600 hover:underline">MVP scope</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -264,12 +264,12 @@
                             <h2 class="text-xl font-semibold text-slate-800 mb-1">2.1 Talent Marketplace</h2>
                             <p class="text-sm text-slate-500 mb-4">Explore various aspects of the talent marketplace.</p>
                             <ul class="space-y-2 text-lg">
-                                <li><a href="skills-overview.html" class="text-indigo-600 hover:underline">Skills Overview</a></li>
-                                <li><a href="skills-passport.html" class="text-indigo-600 hover:underline">Skills Passport</a></li>
-                                <li><a href="skills-intelligence.html" class="text-indigo-600 hover:underline">Skills Intelligence</a></li>
-                                <li><a href="talent-profile.html" class="text-indigo-600 hover:underline">Talent Profile</a></li>
-                                <li><a href="talent-intelligence.html" class="text-indigo-600 hover:underline">Talent Intelligence</a></li>
-                                <li><a href="internal-agents.html" class="text-indigo-600 hover:underline">Internal Agents</a></li>
+                                <li><a href="TALENTHUB-main/skills-overview.html" class="text-indigo-600 hover:underline">Skills Overview</a></li>
+                                <li><a href="TALENTHUB-main/skills-passport.html" class="text-indigo-600 hover:underline">Skills Passport</a></li>
+                                <li><a href="TALENTHUB-main/skills-intelligence.html" class="text-indigo-600 hover:underline">Skills Intelligence</a></li>
+                                <li><a href="TALENTHUB-main/talent-profile.html" class="text-indigo-600 hover:underline">Talent Profile</a></li>
+                                <li><a href="TALENTHUB-main/talent-intelligence.html" class="text-indigo-600 hover:underline">Talent Intelligence</a></li>
+                                <li><a href="TALENTHUB-main/internal-agents.html" class="text-indigo-600 hover:underline">Internal Agents</a></li>
                             </ul>
                         </div>
                     </div>
