Update all changes in the project

--- a/TALENTHUB-main/RoleDictionary/index.html
+++ b/TALENTHUB-main/RoleDictionary/index.html
@@ -185,7 +185,7 @@
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
                             <div class="bg-white border content-card border-slate-200 rounded-lg p-6">
                                 <h3 class="font-semibold text-lg text-slate-800 mb-4">Role Dictionary - Older Version</h3>
-                                <p class="text-sm text-slate-500 mb-4 flex-grow">A dictionary of all the roles in the organization.</p>
+                                <p class="text-sm text-slate-500 mb-4 flex-grow">Your complete role library, seamlessly connected to learning.</p>
                                 <a href="Role Dictionary - Older Version/role-architecture-mini.html" class="text-indigo-600 hover:underline block">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 inline-block mr-1" viewBox="0 0 20 20"><defs><linearGradient id="aiIconGradient" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" style="stop-color:#8A2BE2;stop-opacity:1" /><stop offset="50%" style="stop-color:#FF69B4;stop-opacity:1" /><stop offset="100%" style="stop-color:#FFA500;stop-opacity:1" /></linearGradient></defs><path fill-rule="evenodd" d="M5 2a1 1 0 011 1v1h1a1 1 0 010 2H6v1a1 1 0 01-2 0V6H3a1 1 0 010-2h1V3a1 1 0 011-1zm0 10a1 1 0 011 1v1h1a1 1 0 110 2H6v1a1 1 0 11-2 0v-1H3a1 1 0 110-2h1v-1a1 1 0 011-1zM12 2a1 1 0 011 1v1h1a1 1 0 110 2h-1v1a1 1 0 11-2 0V6h-1a1 1 0 110-2h1V3a1 1 0 011-1zM7 8a1 1 0 011 1v1h1a1 1 0 110 2H8v1a1 1 0 11-2 0v-1H5a1 1 0 110-2h1V9a1 1 0 011-1zm5 2a1 1 0 011 1v1h1a1 1 0 110 2h-1v1a1 1 0 11-2 0v-1h-1a1 1 0 110-2h1v-1a1 1 0 011-1z" clip-rule="evenodd" fill="url(#aiIconGradient)" /></svg>
                                     Role Dictionary - Older Version
