--- a/TALENTHUB-main/index.html
+++ b/TALENTHUB-main/index.html
@@ -246,7 +246,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 inline-block mr-1" viewBox="0 0 20 20" fill="currentColor">
                                         <path d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                                     </svg>
-                                    Display Job Architecture Roles
+                                    Job Architecture Data Explorer
                                 </a>
                             </div>
                         </div>
