Update all changes in the project

--- a/TALENTHUB-main/employee-skills-proficiency.html
+++ b/TALENTHUB-main/employee-skills-proficiency.html
@@ -472,7 +472,7 @@
         });
   </script>
   <div class="custom-footer">
-   Demo Experience by Raj Matukumalli &ndash; For Illustrative Purposes Only - Optimized for Desktop
+   Conceptual mock prepared by Raj Matukumalli — optimized for desktop.
   </div>
  <script>document.addEventListener('contextmenu', event => event.preventDefault());</script>
 </body>
