--- a/TALENTHUB-main/job-architecture/index.html
+++ b/TALENTHUB-main/job-architecture/index.html
@@ -98,7 +98,7 @@
     <script type="module" src="/job-architecture/js/main.js"></script>
     <script src="/career-pathing-scripts.js"></script>
     <div class="custom-footer" style="background-color: #002D62; color: white; text-align: center; padding: 1rem 0; font-size: 0.875rem; position: fixed; left: 0; bottom: 0; width: 100%; z-index: 1000;">
-        Demo Experience by Raj Matukumalli &ndash; For Illustrative Purposes Only - Optimized for Desktop
+        Conceptual mock prepared by Raj Matukumalli — optimized for desktop.
     </div>
 </body>
 </html>
