--- a/TALENTHUB-main/talent-profile.html
+++ b/TALENTHUB-main/talent-profile.html
@@ -721,7 +721,7 @@
   </script>
   <!-- New JS file -->
   <div class="custom-footer">
-   Demo Experience by Raj Matukumalli &ndash; For Illustrative Purposes Only - Optimized for Desktop
+   Conceptual mock prepared by Raj Matukumalli — optimized for desktop.
   </div>
  </body>
 </html>
