Update all changes in the project

--- a/TALENTHUB-main/index.html
+++ b/TALENTHUB-main/index.html
@@ -292,6 +292,13 @@
                                         <li><a href="career_pathing_mvp.html" class="text-indigo-600 hover:underline">MVP scope</a></li>
                                     </ul>
                                 </div>
+                                <div class="bg-white border content-card border-slate-200 rounded-lg p-6">
+                                    <h3 class="font-semibold text-lg text-slate-800 mb-4">Project Plan</h3>
+                                    <p class="text-sm text-slate-500 mb-4 flex-grow">Detailed project plan for employee experience initiatives.</p>
+                                    <ul class="space-y-2">
+                                        <li><a href="employee-experience-project-plan.html" class="text-indigo-600 hover:underline">Employee Experience Project Plan</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
