Update all changes in the project

--- a/TALENTHUB-main/employee-experience-project-plan.html
+++ b/TALENTHUB-main/employee-experience-project-plan.html
@@ -122,12 +122,11 @@
 <body class="bg-gray-100 dark:bg-gray-900 font-sans p-8">
 
     <div class="max-w-7xl mx-auto bg-white dark:bg-gray-800 rounded-2xl shadow-xl overflow-hidden">
-        <div class="p-4 border-b border-gray-200 dark:border-gray-600 flex justify-between">
-            <div class="flex space-x-2">
-                <button id="foundations-tab" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-white bg-blue-600 dark:bg-blue-500">Foundations</button>
-                <button id="capabilities-tab" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-gray-700 bg-gray-200 dark:text-gray-300 dark:bg-gray-700">Capabilities & Features</button>
-            </div>
+        <div class="p-4 border-b border-gray-200 dark:border-gray-600 flex justify-end space-x-2">
+            <button id="foundations-tab" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-white bg-blue-600 dark:bg-blue-500">Foundations</button>
+            <button id="capabilities-tab" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-gray-700 bg-gray-200 dark:text-gray-300 dark:bg-gray-700">Capabilities & Features</button>
             <button id="documents-tab" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-gray-700 bg-gray-200 dark:text-gray-300 dark:bg-gray-700">Documents</button>
+            <a href="index.html" class="tab-button px-4 py-2 text-sm font-medium rounded-lg text-gray-700 bg-gray-200 dark:text-gray-300 dark:bg-gray-700">Home</a>
         </div>
 
         <div class="overflow-x-auto p-4">
