--- a/TALENTHUB-main/job-architecture/index.html
+++ b/TALENTHUB-main/job-architecture/index.html
@@ -53,6 +53,7 @@
                     <div class="flex items-center gap-4">
                         <a href="/import-export/index.html" class="text-sm font-semibold text-slate-800 hover:text-blue-600">Import/Export Data</a>
                         <a href="job_architecture_help_modern.html" class="text-sm font-semibold text-slate-800 hover:text-blue-600">Help</a>
+                        <a href="job-architecture-prd.html" class="text-sm font-semibold text-slate-800 hover:text-blue-600">PRD</a>
                         <a href="/index.html" class="text-sm font-semibold text-slate-800 hover:text-blue-600">Home</a>
                     </div>
                 </div>
